[package]
name = "pdf_test"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version="4.5.18", features=["derive"] }
lopdf = "0.34.0"
pdf-extract = "0.7.10"
serde_json = "1.0.128"
shellexpand = "3.1.0"
rayon = { version = "1.6"}
serde = { version = "1.0", features = ["derive"]}
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["fs", "io-util"]}
pdfium-render = "0.8.25"
image = "0.25.2"
llm-sdk = { path = "volcengine-llm-rust-sdk"}
lazy_static = "1.5.0"
